Update- Img error

--- a/css/main-snake.css
+++ b/css/main-snake.css
@@ -70,7 +70,7 @@ a.snake-link:hover {
    background-image: url('./images/snakeblock.png'), url('./images/snakeblock.png');
 }
 .snake-snakebody-dead {
-   background-image: url('./css/images/deadblock.png'), url('./images/deadblock.png');
+   background-image: url('./images/deadblock.png'), url('./images/deadblock.png');
 }
 
 .snake-food-block {
